--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
-    "promise": "*",
-    "redis": "*",
     "grunt": "^0.4.5",
     "grunt-cli": "0.1.*",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-jshint": "^0.11.0",
-    "grunt-mocha-istanbul": "^2.3.0"
+    "grunt-mocha-istanbul": "*",
+    "redis": "*",
+    "promise": "*",
+    "chai": "*",
+    "sinon": "*"
   },
   "main": "index.js",
   "bugs": {
