--- a/package.json
+++ b/package.json
@@ -28,16 +28,13 @@
     "debug": "*"
   },
   "devDependencies": {
-    "expect.js": "^0.3.1",
+    "chai": "^2.*",
     "grunt": "^0.4.5",
     "grunt-cli": "0.1.*",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-mocha-istanbul": "*",
-    "redis": "*",
-    "promise": "*",
-    "chai": "*",
-    "sinon": "*"
+    "redis": "^0.12.*"
   },
   "main": "index.js",
   "bugs": {
